# adventofcode

./: .gitignore
2020/: 1.hs  11.hs  12.hs  13.hs  14.hs  15.hs  18.hs  19.hs  2.hs  20.hs  21.hs  22.hs  23.hs  24.hs  4.hs  5.hs  8.hs  9.hs  aoc2020.cabal  stack.yaml
a2018/: 1.go  go.mod
a2018/aocutils/: AOC2018.go
a2018/day1/: 1.go
a2018/day2/: 2.go
a2018/day3/: 3.go
a2018/day4/: 4.go
a2018/day5/: 5.go
a2018/day6/: 6.go
a2018/day7/: 7.go
a2018/day8/: 8.go
a2020/: 1.hs  10.hs  16.hs  17.hs  19.hs  2.hs  22.hs  25.hs  3.hs  4.hs  6.hs  7.hs  9.hs
a2021/: 1.jl  10.jl  11.jl  12.jl  13.jl  14.jl  15.jl  16.jl  17.jl  18.jl  19.jl  2.jl  20.jl  21.jl  22.jl  23.jl  24.jl  25.jl  3.jl  4.jl  4.py  5.jl  6.jl  7.jl  8.jl  9.jl
a2022/: Cargo.toml
a2022/src/: 01.rs  02.rs  03.rs  04.rs  05.rs
