Name:           aoc2020
Version:        0.1
cabal-version:  >= 1.2
Build-Type:     Simple

Executable 1
  Build-Depends:  base,
                  mtl,
                  safe
  Main-Is:        1.hs

Executable 2
  Build-Depends:  base,
                  parsec
  Main-Is:        2.hs

Executable 3
  Build-Depends:  base,
                  parsec,
                  containers
  Main-Is:        3.hs

Executable 4
  Build-Depends:  base,
                  parsec,
                  containers
  Main-Is:        4.hs

Executable 5
  Build-Depends:  base,
                  parsec,
                  containers
  Main-Is:        5.hs
