Name:           aoc2020
Version:        0.1
cabal-version:  >= 1.2
Build-Type:     Simple

Executable 1
  Build-Depends:  base,
                  mtl,
                  safe
  Main-Is:        1.hs

Executable 2
  Build-Depends:  base,
                  parsec
  Main-Is:        2.hs

Executable 3
  Build-Depends:  base,
                  parsec,
                  containers
  Main-Is:        3.hs

Executable 4
  Build-Depends:  base,
                  parsec,
                  containers
  Main-Is:        4.hs

Executable 5
  Build-Depends:  base,
                  containers
  Main-Is:        5.hs

Executable 6
  Build-Depends:  base,
                  parsec,
                  containers
  Main-Is:        6.hs

Executable 7
  Build-Depends:  base,
                  parsec,
                  containers
  Main-Is:        7.hs

Executable 8
  Build-Depends:  base,
                  vector,
                  mtl,
                  unordered-containers,
                  safe
  Main-Is:        8.hs

Executable 9
  Build-Depends:  base,
                  vector,
                  mtl
  Main-Is:        9.hs

Executable 10
  Build-Depends:  base,
                  mtl,
                  split
  Main-Is:        10.hs

Executable 11
  Build-Depends:  base,
                  unordered-containers
  Main-Is:        11.hs

Executable 12
  Build-Depends:  base
  Main-Is:        12.hs

Executable 13
  Build-Depends:  base,
                  split
  Main-Is:        13.hs

Executable 14
  Build-Depends:  base,
                  parsec,
                  containers
  Main-Is:        14.hs

Executable 15
  Build-Depends:  base,
                  containers,
                  split
  GHC-Options:    -O2
  Main-Is:        15.hs

Executable 16
  Build-Depends:  base,
                  parsec,
                  containers
  GHC-Options:    -O2
  Main-Is:        16.hs

Executable 17
  Build-Depends:  base,
                  containers
  GHC-Options:    -O2
  Main-Is:        17.hs

Executable 18
  Build-Depends:  base,
                  safe
  GHC-Options:    -O2
  Main-Is:        18.hs

Executable 19
  Build-Depends:  base,
                  parsec,
                  containers
  Main-Is:        19.hs

Executable 20
  Build-Depends:  base,
                  parsec,
                  containers
  Main-Is:        20.hs

Executable 21
  Build-Depends:  base,
                  parsec,
                  containers
  Main-Is:        21.hs

Executable 22
  Build-Depends:  base,
                  parsec,
                  containers
  Main-Is:        22.hs

Executable 23
  Build-Depends:  base,
                  parsec,
                  containers
  Main-Is:        23.hs
